Correct Base64 encoding